# another-ray-tracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  image.rs  main.rs  material.rs  mesh.rs  ray.rs  renderer.rs  scene.rs  triangle.rs
