[package]
name = "another-ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.10", features = ["serde"] }
fastrand = "2.1.0"
obj = "0.10.2"
png = "0.17.13"
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
